// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#ca35421a",
      "borderColor": "#ca3542",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#ca3542"
      fill="currentColor"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Medium",
          "fontSize": 18,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Description
    </Text>
  </View>
</View>
`;

exports[`Banner should render correctly with a close button 1`] = `
<View
  style={
    {
      "backgroundColor": "#ca35421a",
      "borderColor": "#ca3542",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#ca3542"
      fill="currentColor"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Medium",
          "fontSize": 18,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Description
    </Text>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#4459ff",
          "borderRadius": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "center",
          "paddingHorizontal": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#4459ff",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Test Action Button
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "marginLeft": 12,
      }
    }
  >
    <TouchableOpacity
      accessible={true}
      activeOpacity={1}
      disabled={false}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "borderRadius": 8,
          "height": 24,
          "justifyContent": "center",
          "opacity": 1,
          "width": 24,
        }
      }
      testID="banner-close-button-icon"
    >
      <SvgMock
        color="#121314"
        fill="currentColor"
        height={16}
        name="Close"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
        width={16}
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`Banner should render correctly with a start accessory 1`] = `
<View
  style={
    {
      "backgroundColor": "#ca35421a",
      "borderColor": "#ca3542",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Test Start accessory
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Medium",
          "fontSize": 18,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Description
    </Text>
  </View>
</View>
`;

exports[`Banner should render correctly with an action button 1`] = `
<View
  style={
    {
      "backgroundColor": "#ca35421a",
      "borderColor": "#ca3542",
      "borderLeftWidth": 4,
      "borderRadius": 4,
      "flexDirection": "row",
      "padding": 12,
      "paddingLeft": 8,
    }
  }
  testID="banneralert"
  variant="Alert"
>
  <View
    style={
      {
        "marginRight": 8,
      }
    }
  >
    <SvgMock
      color="#ca3542"
      fill="currentColor"
      height={24}
      name="Danger"
      style={
        {
          "height": 24,
          "width": 24,
        }
      }
      width={24}
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Medium",
          "fontSize": 18,
          "fontWeight": "500",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Title
    </Text>
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "CentraNo1-Book",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Sample Banner Description
    </Text>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#4459ff",
          "borderRadius": 0,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": "auto",
          "justifyContent": "center",
          "paddingHorizontal": 0,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#4459ff",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Test Action Button
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
